[UPDATE] fix list promo

--- a/src/features/FilterServices/filter-services.css
+++ b/src/features/FilterServices/filter-services.css
@@ -37,11 +37,14 @@
         margin-top: 16px;
     }
     .home-promo-ser .ser-list {
-        flex-wrap: nowrap;
-        width: max-content;
-        display: flex;
-        gap: 0 16px;
+        /* flex-wrap: nowrap; */
+        /* width: max-content; */
+        /* display: flex; */
+        grid-gap: 16px;
         padding: 0px 16px 16px;
         margin-top: 0;
+        grid-template-columns: repeat(2, 1fr);
+        display: grid;
+        margin: 0;
     }
 }
