--- a/src/features/Account/components/UserDiscounts/discount.css
+++ b/src/features/Account/components/UserDiscounts/discount.css
@@ -1,4 +1,4 @@
-.discount-head{
+.discount-head {
     display: none;
 }
 .dis-cnt__list {
@@ -11,14 +11,18 @@
     height: 142px;
     padding: 8px;
 }
+.discount-item:hover {
+    box-shadow: 0 6px 15px #dcd8ee;
+    border: 1px solid #ccc;
+}
 
 .discount-item {
+    border: 1px solid transparent;
     width: 100%;
     height: 100%;
     background-color: var(--bgWhite);
     padding: 6px;
-    -webkit-box-shadow: 0px 0px 23px 0px rgba(0, 0, 0, 0.05);
-    box-shadow: 0px 0px 23px 0px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 6px 15px #dcd8ee;
     cursor: pointer;
     border-radius: 8px 8px 8px 8px;
     display: flex;
@@ -94,7 +98,7 @@
     color: var(--text-hover);
     text-decoration: line-through;
 }
-.dis-cnt__list-btn{
+.dis-cnt__list-btn {
     margin-top: 24px;
     color: var(--purple);
     border: none;
@@ -105,22 +109,41 @@
     font-weight: 700;
 }
 @media only screen and (max-width: 767px) {
-    .discount-head{
+    .discount-item .vail_util {
+        position: unset;
+        bottom: unset;
+    }
+    .discount-item__cnt-name {
+        font-size: 14px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+    }
+    .discount-item__cnt-price span {
+        font-size: 14px;
+    }
+    .discount-item__cnt-price span:nth-child(2) {
+        font-size: 12px;
+    }
+    .discount-head {
         display: block;
     }
-    .dis-cnt__list{
+    .dis-cnt__list {
         display: flex;
         flex-direction: column;
     }
-    .dis-cnt__list-item{
+    .dis-cnt__list-item {
         width: 100%;
         padding: 0px;
     }
-    .discount-item__img{
+    .discount-item__img {
         width: 84px;
         height: 84px;
     }
-    .discount-item__cnt{
+    .discount-item__cnt {
         width: calc(100% - 84px);
     }
 }
