[UPDATE] fix title page detail service mobile

--- a/src/features/ProductDetail/product.css
+++ b/src/features/ProductDetail/product.css
@@ -374,7 +374,7 @@
         width: 100%;
     }
     .product-desc .section-title {
-        display: none;
+        /* display: none; */
     }
     /* product detail mer */
     .pr-de-mer__content {
