--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -490,6 +490,62 @@
     color: var(--text-black);
 }
 
+/* org services */
+.org-services-cnt {
+    padding: 28px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.org-services-cnt__left {
+    width: 16.6%;
+    padding-right: 6px;
+}
+
+.org-services-cnt__left .cate-list__item {
+    padding: 4px 8px;
+    margin-bottom: 4px;
+    border-radius: 6px;
+    color: var(--text-black);
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.cate-list__item-title {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+}
+
+.org-services-cnt__right {
+    width: 83.3%;
+}
+
+.org-services-cnt__right-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.org-services-cnt__right-list li {
+    list-style: none;
+    width: 20%;
+    padding: 12px 8px;
+    cursor: pointer;
+}
+.org-combos-cnt__right{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.org-combos-cnt__right li{
+    padding: 8px;
+    width: 16.6%;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 1023px) {
     .org-detail {
         padding: 0px;
@@ -522,7 +578,7 @@
         background-color: var(--bgWhite);
         padding: 16px 8px;
         border-radius: 8px;
-        box-shadow: 0 6px 15px #dcd8ee;
+        box-shadow: 0px 4px 6px rgb(0 0 0 / 10%);
     }
 
     .org-detail__cnt-bot .icon {
@@ -580,6 +636,7 @@
 
     .org-tab-list {
         width: max-content;
+        border-bottom: solid 1px #FAFAFA;
     }
 
     .org-tab-list li {
@@ -733,5 +790,54 @@
         font-weight: 500;
         font-size: 12px;
         line-height: 16px;
+    }
+
+    .org-services-cnt {
+        padding: 0px;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .org-services-cnt__left {
+        padding: 0px;
+        width: 100%;
+        overflow-x: scroll;
+        padding: 8px 0px;
+        position: sticky;
+        z-index: 10;
+        top: 86px;
+        background-color: var(--bgWhite);
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .org-services-cnt__left .cates-list {
+        display: flex;
+        width: max-content;
+        padding-left: 12px;
+    }
+
+    .cate-list__item {
+        margin-bottom: 0px !important;
+        margin-right: 4px;
+    }
+
+    .org-services-cnt__right {
+        width: 100%;
+        padding: 20px 12px;
+    }
+
+    .org-services-cnt__right-list {
+        flex-direction: column;
+    }
+
+    .org-services-cnt__right-list li,
+    .org-combos-cnt__right li {
+        width: 100%;
+        width: 100%;
+        padding: 12px 0px;
+        border-bottom: solid 1px var(--bgGray);
+    }
+    .org-combos-cnt__right li{
+        padding: 12px;
     }
 }
