--- a/src/features/Reviews/review.css
+++ b/src/features/Reviews/review.css
@@ -173,7 +173,8 @@
     color: #8c8c8c;
 }
 .evaluate-comment .comment-img {
-    max-width: 400px;
+    max-width: 200px;
+    max-height: 200px;
     border-radius: 16px;
     overflow: hidden;
     margin: 8px 0;
@@ -183,7 +184,27 @@
     color: #8c8c8c;
     padding: 24px;
 }
-
+.org-evaluate .evaluate-input__upload {
+    max-width: 200px;
+    max-height: 200px;
+    padding: 0 0 24px 24px;
+    position: relative;
+}
+.org-evaluate .evaluate-input__upload img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 16px;
+    overflow: hidden;
+}
+.org-evaluate .btn-close {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    outline: none;
+    border: none;
+    border-radius: 100px;
+}
 @media only screen and (min-width: 767px) and (max-width: 1023px) {
     .org-evaluate {
         width: 100%;
