[UPDATE] logic service detail

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --green: #7FC128;
   --black: #3B3A40;
   --grey: #EEEDF2;
+  --grey_2:#FAFAFA;
   --hover: #000000;
   --bgGray: #e5e5e5;
   --bgWhite: #f5f5f7;
