[UPDATE] redux product detail, service detail

--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -824,7 +824,7 @@
 @media only screen and (max-width: 1023px) {
     .org-container .org-information-cnt {
         grid-gap: 16px 0;
-        padding: 16px 0 16px 0;
+        padding: 16px 12px;
         display: flex;
         flex-direction: column;
     }
@@ -909,8 +909,7 @@
     }
 
     .org-container__tab-cnt {
-        width: 100%;
-        padding-right: 20px;
+       padding: 0px;
     }
 
     .org-tab-list {
@@ -931,7 +930,7 @@
 
     /* org discounts */
     .org-deal-hot {
-        padding: 0px;
+        padding: 16px 12px;
     }
 
     .org-deal-hot__discounts {
@@ -1072,15 +1071,14 @@
     }
 
     .org-services-cnt__left {
-        padding: 0px;
+        padding: 8px 12px;
         width: 100%;
         overflow-x: scroll;
         position: sticky;
         z-index: 10;
-        top: 113px;
+        top: 96px;
         background-color: var(--bgWhite);
-        /* background-color: var(--bgWhite);
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     .org-services-cnt__left .cates-list {
@@ -1095,7 +1093,7 @@
 
     .org-services-cnt__right {
         width: 100%;
-        padding: 8px 0 16px 0;
+        padding: 8px 12px;
     }
 
     .org-services-cnt__right-list {
@@ -1122,7 +1120,7 @@
         margin: 0px;
     }
     .org-container .org-galleries-cnt {
-        padding: 0px;
+        padding: 16px 12px;
     }
     .org-galleries__images-section {
         margin: 0px;
@@ -1142,7 +1140,7 @@
     .org-galleries__images-section .title {
         position: fixed;
         z-index: 2;
-        top: 48px;
+        top: 0px;
         left: 0;
         right: 0;
         background-color: var(--bgWhite);
@@ -1168,7 +1166,7 @@
         left: 0;
         background-color: var(--bgWhite);
         z-index: 999;
-        padding: 8px 0;
+        padding: 0px 12px !important;
         border-bottom: none;
         border-top: none;
     }
