--- a/src/features/Trends/style.css
+++ b/src/features/Trends/style.css
@@ -1,5 +1,7 @@
 .trend-ctn{
-    padding: 8px 0 24px;
+    padding: 8px 0 12px;
+    margin-bottom: 8px;
+    background: rgb(255,255,255);
 }
 .trend-ctn-head{
     font-family: "Nunito";
@@ -56,8 +58,9 @@
     height: 32px;
     left: 6px;
     top: 6px;
-    background: #8C8C8C;
+    background: transparent;
     border-radius: 100%;
+    backdrop-filter: blur(10px);
     overflow: hidden;
     z-index: 1;
     border: 1px solid #8C8C8C;
