--- a/src/features/Videos/style.css
+++ b/src/features/Videos/style.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: auto;
     padding: 12px;
-    box-shadow: 0 1px 2px rgb(0 0 0 / 20%);
+    /* box-shadow: 0 1px 2px rgb(0 0 0 / 20%); */
     background: rgb(255,255,255);
     border-radius: 8px;
     margin-bottom: 16px;
@@ -23,19 +23,24 @@
     margin-right: 8px;
     cursor: pointer;
     position: relative;
-    padding-bottom: calc(100% * 4/3);
+    padding-bottom: calc(100% * 10/9);
 }
 .trend-item-ctn .video-item__pc{
     position: relative;
 }
-.video-item__pc{
-    object-fit: contain;
+.video-item-pc__wr .video-item__pc{
+    object-fit: cover;
     object-position: top;
+    z-index: 3;
+}
+.video-item__pc{
+    object-fit: cover;
+    object-position: center;
     width: 100%;
     height: 100%;
     position: absolute;
     border-radius: 8px;
-    z-index: 3;
+    z-index: 0;
 }
 .blur{
     position: absolute;
@@ -54,7 +59,6 @@
     align-items: center;
 }
 .video-item-pc header{
-    padding: 14px 0 0;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -86,7 +90,7 @@
 .video-item_product_list{
     width: calc(100% * 2/10);
     position: relative;
-    padding-bottom: 100%;
+    padding-bottom: calc(100% * 10/9);
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -114,6 +118,8 @@
     flex-direction: column;
     align-items: stretch;
     align-content: center;
+    position: relative;
+    margin-bottom: 8px;
 }
 .video-item_product_item-img{
     border-radius: 8px;
@@ -122,17 +128,40 @@
 .video-item_product_item-title{
     font-family: 'Nunito';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 10px;
     line-height: 12px;
     color: #262626;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     display: -webkit-box;
     word-wrap: break-word;
     overflow-y: hidden;
 }
-
+.video-item_product_item-price{
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+}
+.video-item_product_item-special_price{
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 8px;
+    line-height: 10px;
+    color: #8C8C8C;
+    text-decoration: line-through;
+}
+.video-item_product_item-add_cart{
+    width: 12px;
+    height: 12px;
+    margin-left: auto;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 .react-btn{
     display: flex;
     margin: 12px 0;
@@ -160,12 +189,51 @@
 .react-btn>div:last-child{
     margin-right: 0;
 }
+.video-item_comments .evaluate-input{
+    padding: 0;
+}
+.video-item-comments-preview_item{
+    font-family: 'Nunito';
+}
+.video-item-comments-preview_item .cmt_name{
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    padding-right: 6px;
+}
+.video-item-comments-preview_item .cmt_body{
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+}
+.video-item-comments-read_all{
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 16px;
+    margin-bottom: 12px;
+    display: flex;
+}
+.video-item-comments-read_all>img{
+    margin-left: 4px;
+}
 @media only screen and (min-width: 1023px){
     .video-item-pc__wr{
         width: 100%;
         padding-bottom: calc(100% * 0.5);
     }
+    .video-item-pc__wr .video-item__pc{
+        object-fit: contain;
+        object-position: top;
+        z-index: 3;
+    }
     .video-item_product_list{
         padding-bottom: calc(100% * 0.5);
     }   
+    .video-item__pc.back-drop__vid{
+        object-fit: cover;
+        object-position: center;
+        z-index: 1;
+    }
 }
