--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -1,4 +1,4 @@
-.suggest-cnt__title {
+/* .suggest-cnt__title {
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
@@ -71,7 +71,6 @@
     margin: 0px 11px;
 }
 .suggest-card__list-quantity span {
-    /* margin-left: 26px; */
     text-align: end;
 }
 .slider-recoment-list {
@@ -85,10 +84,9 @@
     font-size: 14px;
     color: rgb(157, 157, 157);
     font-weight: bold;
-}
+} */
 
-/* Tablet */
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+/* @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .suggest-cnt .suggest-price {
         display: flex;
         flex-direction: column-reverse;
@@ -123,10 +121,9 @@
         grid-template-columns: repeat(4, 1fr);
         padding: 24px;
     }
-}
+} */
 
-/* Mobile */
-@media only screen and (max-width: 767px) {
+/* @media only screen and (max-width: 767px) {
     .recomment-cnt {
         padding-top: 16px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -162,7 +159,6 @@
         font-size: 14px !important;
         padding: 4px !important;
     }
-    /* suggest */
     .suggest-cnt__list li {
         border-bottom: solid 1px var(--bgGray);
     }
@@ -186,5 +182,359 @@
 
     .suggest__retail-pr {
         font-size: 14px;
+    }
+} */
+.flexX-gap-8 {
+    display: flex;
+    gap: 0 8px;
+    grid-gap: 0 8px;
+    align-items: center;
+}
+.flexX-gap-4 {
+    display: flex;
+    gap: 0 4px;
+    grid-gap: 0 4px;
+    align-items: center;
+}
+.service-detail {
+    padding: 48px 0;
+}
+.service-detail__head {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    justify-content: space-between;
+}
+.service-detail .service-detail__left {
+    width: 40%;
+    height: 100%;
+    padding: 16px;
+    background-color: #fff;
+    flex-shrink: 0;
+}
+.service-detail .service-detail__right {
+    width: 60%;
+    padding: 24px;
+    background-color: #fff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.service-detail .detail-left__img {
+    width: 450px;
+    height: 450px;
+}
+.service-detail .detail-left__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    flex-shrink: 0;
+}
+.service-detail .detail-right__name {
+    position: relative;
+}
+.service-detail .detail-right__name .favorite {
+    position: absolute;
+    padding: 8px;
+    top: 0px;
+    right: 0;
+    background-color: #eeedf2;
+    width: 36px;
+    height: 36px;
+    border-radius: 100px;
+    overflow: hidden;
+}
+.service-detail .detail-right__name p {
+    font-size: 24px;
+    font-weight: 500;
+    width: 90%;
+    line-height: 36px;
+}
+.service-detail .detail-right__org p {
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--purple);
+    padding: 0 16px;
+}
+.service-detail .detail-right__org p:nth-child(1) {
+    border-right: 1px solid var(--purple);
+}
+.service-detail .detail-right__org {
+    display: flex;
+    margin-left: -16px;
+    margin-bottom: 8px;
+}
+.service-detail .detail-right__evaluate {
+    display: flex;
+    grid-gap: 0 8px;
+    align-items: center;
+    width: 100%;
+    margin: 8px 0;
+}
+.service-detail .evaluate-item {
+    display: flex;
+    align-items: center;
+    grid-gap: 0 4px;
+}
+.service-detail .evaluate-item p {
+    font-size: 16px;
+    font-weight: bold;
+}
+.service-detail .detail-right__percent {
+    padding: 2px 4px;
+    background-color: var(--red-cl);
+    width: max-content;
+    border-radius: 4px;
+    background-color: rgb(255 240 241);
+    border-color: var(--red-cl);
+    border-style: solid;
+    border-width: 1px;
+    margin-top: 4px;
+}
+.service-detail .detail-right__percent p {
+    color: var(--red-cl);
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: bold;
+    font-size: 16px;
+}
+.service-detail .detail-right__duration {
+    padding: 4px 8px;
+    background-color: var(--bgWhite);
+    width: max-content;
+    border-radius: 8px;
+    margin: 8px 0;
+}
+.service-detail .detail-right__duration p {
+    font-size: 16px;
+    font-weight: bold;
+}
+.service-detail .detail-right__duration img {
+    width: 20px;
+    height: 20px;
+}
+.service-detail .service-detail__right .detail-right__price .price {
+    font-size: 32px;
+    font-weight: bold;
+}
+.service-detail .service-detail__right .detail-right__body {
+    display: flex;
+    grid-gap: 0 24px;
+    width: 100%;
+    margin: 24px 0;
+}
+.service-detail .detail-right__info {
+    width: 55%;
+}
+.service-detail .detail-right__infoMer {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 8px 0;
+    padding: 16px;
+    border-radius: 4px;
+    box-shadow: rgb(242 242 242) 1px 1px 0px 0px inset,
+        rgb(242 242 242) -1px -1px 0px 0px inset;
+}
+.service-detail .infoMer-top {
+    display: flex;
+    align-items: center;
+    grid-gap: 0 8px;
+}
+.service-detail .infoMer-top__name {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+}
+.service-detail .infoMer-top__img {
+    width: 44px;
+    height: 44px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    overflow: hidden;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.service-detail .infoMer-top__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.service-detail .infoMer-top__right {
+    font-size: 16px;
+    font-weight: bold;
+}
+.service-detail .infoMer-top__right .infoMer-top__address {
+    margin-top: 4px;
+    font-size: 14px;
+    color: rgb(128, 128, 137);
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+}
+.service-detail .infoMer-mid {
+    padding: 8px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.service-detail .infoMer-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 4px 0;
+}
+/* .service-detail .infoMer-item:not(:nth-child(3)) {
+    border-right: 1px solid #ccc;
+} */
+
+.service-detail .infoMer-item__wrap p {
+    font-weight: bold;
+}
+.service-detail .infoMer-item__text {
+    font-size: 12px;
+    font-weight: bold;
+    color: rgb(128, 128, 137);
+}
+.service-detail .infoMer-bottom {
+    display: flex;
+    grid-gap: 0 10px;
+}
+.service-detail .infoMer-bottom__left,
+.service-detail .infoMer-bottom__right {
+    width: 50%;
+    padding: 4px 8px;
+    display: flex;
+    grid-gap: 0 4px;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid var(--purple);
+    color: var(--purple);
+    background-color: #fff;
+    font-weight: bold;
+}
+
+.service-detail .infoMer-bottom__right img {
+    width: 20px;
+    height: 20px;
+}
+.service-detail .detail-right__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.service-detail .bottom-quantity__wrap {
+    display: flex;
+    align-items: center;
+}
+.service-detail .bottom-quantity__text {
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+.service-detail .quantity-input {
+    width: 40px;
+    height: 35px;
+    outline: none;
+    border: none;
+    font-size: 16px;
+    color: var(--purple);
+    font-weight: bold;
+    text-align: center;
+}
+.service-detail .quantity-btn:first-child {
+    background-color: #ccc;
+}
+.service-detail .quantity-btn {
+    width: 35px;
+    height: 35px;
+    border: none;
+    outline: none;
+    background-color: var(--purple);
+    border-radius: 8px;
+}
+.service-detail .quantity-btn img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.service-detail .bottom-addCart {
+    padding: 8px 16px;
+    background-color: var(--purple);
+    display: flex;
+    border-radius: 8px;
+    grid-gap: 0 8px;
+}
+.service-detail .bottom-addCart p {
+    color: #fff;
+    font-weight: bold;
+}
+
+.service-detail__tab {
+    padding: 24px;
+    background-color: #fff;
+    margin: 24px 0;
+}
+
+.service-detail .service-detail__tabitem {
+    padding: 24px 0;
+}
+
+/* cus tab MUI */
+.service-detail .MuiTabs-root {
+    min-height: 48px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #fff;
+}
+.service-detail .MuiTabs-scroller {
+    overflow-x: scroll !important;
+    border-bottom: 1px solid #ccc;
+}
+.service-detail .MuiTab-root.Mui-selected {
+    color: var(--purple) !important;
+}
+.service-detail .MuiTab-root {
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: capitalize;
+    font-family: inherit;
+    padding: 8px 0;
+    max-width: unset;
+    min-width: unset;
+    margin-right: 16px;
+    min-height: 48px;
+}
+
+.service-detail .MuiTabs-indicator {
+    background-color: var(--purple) !important;
+}
+.service-detail .MuiTabPanel-root {
+    padding: 0;
+}
+
+/* end cus tab MUI */
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .service-detail {
+        padding: 24px 0;
+    }
+    .service-detail .service-detail__right {
+        display: none;
+    }
+    .service-detail .service-detail__left {
+        width: 100%;
+    }
+    .service-detail .detail-left__img {
+        width: 100%;
     }
 }
