--- a/src/features/Homev2/home-se.css
+++ b/src/features/Homev2/home-se.css
@@ -268,6 +268,9 @@
         margin: 0;
         width: unset;
     }
+    .home-cate-tree-cnt{
+        display: none;
+    }
 
     .home-title__tag {
         display: none;
