--- a/src/features/Reviews/review.css
+++ b/src/features/Reviews/review.css
@@ -77,6 +77,7 @@
     overflow: hidden;
     border-radius: 100px;
     flex-shrink: 0;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .evaluate-input__wrap {
     width: 100%;
@@ -146,6 +147,8 @@
     width: 32px;
     height: 32px;
     flex-shrink: 0;
+    border-radius: 100px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .comment-user__ava img {
     width: 100%;
