--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -479,7 +479,7 @@
 }
 
 .service-detail__tab {
-    padding: 24px;
+    padding: 0 24px;
     background-color: #fff;
     margin: 24px 0;
 }
@@ -499,6 +499,10 @@
     border: 1px solid transparent;
     background-color: var(--purple);
     color: #fff;
+}
+
+.service-detail .service-detail__mobile {
+    display: none;
 }
 
 /* cus tab MUI */
@@ -538,17 +542,109 @@
 
 /* end cus tab MUI */
 
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+@media only screen and (max-width: 1023px) {
     .service-detail {
-        padding: 24px 0;
+        padding: 0;
+    }
+    .service-detail .service-detail__description {
+        font-size: 14px;
+    }
+    .service-detail .service-detail__tabitem {
+        padding-top: 16px;
     }
     .service-detail .service-detail__right {
         display: none;
     }
+    .service-detail .service-detail__tab {
+        margin: 80px 0 0 0;
+        padding: 0 12px;
+    }
     .service-detail .service-detail__left {
         width: 100%;
+        padding: 0;
+        position: relative;
+    }
+    .service-detail .service-detail__mobile {
+        display: block;
+        width: calc(100% - 24px);
+        background-color: #fff;
+        padding: 12px;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        gap: 8px 0;
     }
     .service-detail .detail-left__img {
         width: 100%;
+    }
+    .service-detail .service-detail__comment {
+        width: 100%;
+    }
+
+    .service-detail .detail-left__img {
+        width: 100%;
+        height: 375px;
+    }
+    .service-detail .service-detail__mobile-name {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        max-width: 90%;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+    }
+    .service-detail .service-detail__mobile-favorite {
+        position: absolute;
+        padding: 8px;
+        top: 12px;
+        right: 12px;
+        background-color: #eeedf2;
+        width: 36px;
+        height: 36px;
+        border-radius: 100px;
+        overflow: hidden;
+    }
+    .service-detail .service-detail__mobile-mid {
+        display: flex;
+        gap: 0 4px;
+        align-items: center;
+    }
+    .service-detail .service-detail__mobile-mid img {
+        width: 20px;
+        height: 20px;
+    }
+    .service-detail .service-detail__mobile-mid p {
+        font-weight: 500;
+        font-size: 12px;
+        color: #8c8c8c;
+    }
+    .service-detail .service-detail__mobile-bottom {
+        display: flex;
+        gap: 0 8px;
+        align-items: center;
+    }
+    .service-detail .service-detail__mobile-percent {
+        clip-path: polygon(0 0, 92% 0, 100% 50%, 92% 100%, 0 100%, 7% 50%);
+        background-color: var(--red-cl);
+        padding: 4px 16px;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 16px;
+        color: #fff;
+    }
+    .service-detail .service-detail__org {
+        margin-top: 24px;
+    }
+    .service-detail .MuiTab-root {
+        font-size: 14px;
     }
 }
