--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -231,6 +231,7 @@
     height: 100%;
     object-fit: cover;
     flex-shrink: 0;
+    border-radius: 8px;
 }
 .service-detail .detail-right__name {
     position: relative;
@@ -546,6 +547,9 @@
     .service-detail {
         padding: 0;
     }
+    .service-detail .org-evaluate__cnt {
+        padding: 0;
+    }
     .service-detail .service-detail__description {
         font-size: 14px;
     }
@@ -594,7 +598,7 @@
         font-weight: 700;
         font-size: 16px;
         line-height: 24px;
-        max-width: 90%;
+        max-width: 86%;
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
@@ -619,8 +623,8 @@
         align-items: center;
     }
     .service-detail .service-detail__mobile-mid img {
-        width: 20px;
-        height: 20px;
+        width: 14px;
+        height: 14px;
     }
     .service-detail .service-detail__mobile-mid p {
         font-weight: 500;
@@ -635,14 +639,14 @@
     .service-detail .service-detail__mobile-percent {
         clip-path: polygon(0 0, 92% 0, 100% 50%, 92% 100%, 0 100%, 7% 50%);
         background-color: var(--red-cl);
-        padding: 4px 16px;
+        padding: 2px 10px;
         font-weight: 700;
         font-size: 12px;
         line-height: 16px;
         color: #fff;
     }
     .service-detail .service-detail__org {
-        margin-top: 24px;
+        margin-top: 16px;
     }
     .service-detail .MuiTab-root {
         font-size: 14px;
