--- a/src/features/Reviews/review.css
+++ b/src/features/Reviews/review.css
@@ -124,7 +124,7 @@
 
 /* comment */
 .evaluate-comment {
-    padding: 0 24px;
+    padding: 0 24px 24px 24px;
 }
 .evaluate-comment:not(:nth-child(3)) {
     margin-top: 24px;
