--- a/src/features/Videos/style.css
+++ b/src/features/Videos/style.css
@@ -45,7 +45,7 @@
 .blur{
     position: absolute;
     inset: 0;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(20px);
     z-index: 2;
 }
 .back-drop__vid{
@@ -218,6 +218,57 @@
 .video-item-comments-read_all>img{
     margin-left: 4px;
 }
+.video-item_dialog{
+    display: flex;
+    flex-direction: row;
+    max-width: 1400px;
+    width: calc(100vw - 64px);
+    height: 90vh;
+}
+.video-item_dialog{
+    background-color: var(--bgWhite);
+}
+.video-item_dialog .org-evaluate__cnt{
+}
+.video-item_dialog .org-evaluate__cnt .evaluate-rating{
+    display: none;
+}
+.video-item_dialog .video-item-pc__wr{
+    width: 65%;
+}
+.video-item_dialog .video-item-pc__wr .video-item__pc{
+    /* width: max-content; */
+}
+.video-item_dialog-body{
+    height: 100%;
+    overflow-y: scroll;
+    width: 35%;
+}
+.video-item_dialog-body{
+    padding: 24px 0;
+}
+.video-item_dialog-body>header,
+.video-item_dialog-body .video-item_body-status,
+.video-item_dialog-body .video-item_react-ctn{
+    padding-left: 16px;
+    padding-right: 16px;
+}
+.video-item_dialog-body .org-evaluate__cnt .evaluate-input,
+.video-item_dialog-body .org-evaluate__cnt .total-comment,
+.video-item_dialog-body .org-evaluate__cnt .evaluate-comment{
+    padding-left: 16px;
+    padding-right: 16px;
+}
+.close_btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 4;
+    background: var(--purple);
+    border-radius: 100%;
+}
+.close_btn>img{
+}
 @media only screen and (min-width: 1023px){
     .video-item-pc__wr{
         width: 100%;
@@ -235,5 +286,54 @@
         object-fit: cover;
         object-position: center;
         z-index: 1;
+    }
+}
+@media only screen and (max-width: 1023px){
+    .video-item_dialog .video-item-pc__wr{
+        width: 50%;
+    }
+    .video-item_dialog-body{
+        width: 50%;
+    }
+    .video-item_dialog .video-item-pc__wr{
+        padding-bottom: 50%;
+    }
+    .video-item_dialog .video-item-pc__wr .video-item__pc{
+        object-fit: contain;
+        object-position: center;
+        width: 100%;
+        z-index: 3;
+    }
+    .video-item_dialog .video-item-pc__wr .video-item__pc.back-drop__vid{
+        z-index: 1;
+        object-fit: cover;
+    }
+    .video-item_dialog{
+        height: 100vh;
+    }
+}
+
+@media only screen and (max-width: 475px){
+    .close_btn{
+        left: 10px;
+        right: unset;
+    }
+    .video-item_dialog{
+        flex-direction: column;
+        width: 100vw;
+        overflow-y: scroll;
+    }
+    .video-item_dialog .video-item-pc__wr{
+        width: 100%;
+        padding-bottom: calc(100% * 1024/576);
+    }
+    .video-item_dialog-body{
+        width: 100%;
+        overflow-y: unset;
+        height: max-content;
+    }
+    .blur,
+    .video-item__pc.back-drop__vid{
+        display: none;
     }
 }
