--- a/src/features/ProductDetail/product.css
+++ b/src/features/ProductDetail/product.css
@@ -11,3 +11,19 @@
     text-decoration: line-through;
     margin-left: 8px;
 }
+
+@media only screen and (max-width: 1023px) {
+    .service-detail__mobile-price span:nth-child(1) {
+        color: var(--red-cl);
+        font-weight: 700;
+        font-size: 24px;
+    }
+
+    .service-detail__mobile-price span:nth-child(2) {
+        color: rgb(140, 140, 140);
+        font-size: 14px;
+        text-decoration: line-through;
+        margin-left: 8px;
+        font-weight: 500;
+    }
+}
