[UPDATE] fix scoll & UI service detail

--- a/src/features/Reviews/review.css
+++ b/src/features/Reviews/review.css
@@ -224,6 +224,24 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .service-detail .MuiRating-root {
+        font-size: 16px !important;
+    }
+    .evaluate-rating__quantity span {
+        font-size: 14px;
+    }
+    .evaluate-rating__total span:nth-child(1) {
+        font-size: 18px;
+    }
+    .evaluate-rating__total span:nth-child(2) {
+        font-size: 14px;
+    }
+    .evaluate-rating__progress span {
+        font-size: 14px;
+    }
+    .comment-user__info {
+        font-size: 14px;
+    }
     .org-evaluate {
         width: 100%;
     }
