--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -661,4 +661,7 @@
     .service-detail .infoMer-mid {
         padding: 0px;
     }
+    .service-detail .MuiTabs-root {
+        top: 49px;
+    }
 }
