--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,84 @@
-:root{
-  --purple: #7161BA;
-  --green: #7FC128;
-  --black: #3B3A40;
-  --grey: #EEEDF2;
-  --grey_2:#FAFAFA;
-  --hover: #000000;
-  --bgGray: #e5e5e5;
-  --bgWhite: #f5f5f7;
-  --darkBlue: #4E4693;
+:root {
+    --purple: #7161ba;
+    --green: #7fc128;
+    --black: #3b3a40;
+    --grey: #eeedf2;
+    --grey_2: #fafafa;
+    --hover: #000000;
+    --bgGray: #e5e5e5;
+    --bgWhite: #f5f5f7;
+    --darkBlue: #4e4693;
 }
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
+}
+
+.flexX-gap-8 {
+    display: flex;
+    gap: 0 8px;
+    grid-gap: 0 8px;
+    align-items: center;
+}
+.flexX-gap-4 {
+    display: flex;
+    gap: 0 4px;
+    grid-gap: 0 4px;
+    align-items: center;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 /* responsive */
-.home-mb{
-  display: none;
+.home-mb {
+    display: none;
 }
 /* Mobile */
-@media only screen and (max-width: 739px){
-  .home-mb{
+@media only screen and (max-width: 739px) {
+    .home-mb {
         display: none;
         padding-top: 600px;
         width: 100vh;
         height: 1000vh;
         z-index: 1000;
         background-color: var(--bg-gray);
-  }
-  .home-mb__title{
+    }
+    .home-mb__title {
         width: 100%;
         text-align: center;
         font-size: 50px;
         font-weight: bold;
         color: var(--purple);
-  }
+    }
 }
