--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -1,3 +1,57 @@
+/* cus tab MUI */
+.service-detail .MuiTabs-root {
+    min-height: 48px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #fff;
+}
+.service-detail .MuiTabs-scroller {
+    overflow-x: scroll !important;
+    border-bottom: 1px solid #ccc;
+}
+.service-detail .MuiTab-root.Mui-selected {
+    color: var(--purple) !important;
+}
+.service-detail .MuiTab-root {
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: capitalize;
+    font-family: inherit;
+    padding: 8px 0;
+    max-width: unset;
+    min-width: unset;
+    margin-right: 16px;
+    min-height: 48px;
+}
+
+.service-detail .MuiTabs-indicator {
+    background-color: var(--purple) !important;
+}
+.service-detail .MuiTabPanel-root {
+    padding: 0;
+}
+.service-detail .service-detail__bottom {
+    display: none;
+}
+.service-detail .detail-right__head-img {
+    display: none;
+}
+.service-detail .detail-right__duration-wrap {
+    display: flex;
+    align-items: center;
+    gap: 0 8px;
+    padding: 8px 0;
+}
+.service-detail .detail-right__duration-wrap p {
+    font-weight: bold;
+}
+.service-detail__org-mb {
+    display: none;
+}
+/* end cus tab MUI */
+
 .flexX-gap-8 {
     display: flex;
     gap: 0 8px;
@@ -327,64 +381,82 @@
     display: none;
 }
 
-/* cus tab MUI */
-.service-detail .MuiTabs-root {
-    min-height: 48px;
-    position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    background-color: #fff;
-}
-.service-detail .MuiTabs-scroller {
-    overflow-x: scroll !important;
-    border-bottom: 1px solid #ccc;
-}
-.service-detail .MuiTab-root.Mui-selected {
-    color: var(--purple) !important;
-}
-.service-detail .MuiTab-root {
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: capitalize;
-    font-family: inherit;
-    padding: 8px 0;
-    max-width: unset;
-    min-width: unset;
-    margin-right: 16px;
-    min-height: 48px;
-}
-
-.service-detail .MuiTabs-indicator {
-    background-color: var(--purple) !important;
-}
-.service-detail .MuiTabPanel-root {
-    padding: 0;
-}
-.service-detail .service-detail__bottom {
-    display: none;
-}
-.service-detail .detail-right__head-img {
-    display: none;
-}
-.service-detail .detail-right__duration-wrap {
+.detailPolicy {
     display: flex;
-    align-items: center;
-    gap: 0 8px;
-    padding: 8px 0;
+    flex-direction: column;
+    height: 100%;
 }
-.service-detail .detail-right__duration-wrap p {
-    font-weight: bold;
+.detailPolicy-useguild__top {
+    margin-bottom: 12px;
 }
-.service-detail__org-mb{
-    display: none;
+.detailPolicy-useguild .detailPolicy-useguild__top p {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
 }
 
-/* end cus tab MUI */
+.detailPolicy-useguild__list {
+    margin-top: 8px;
+}
+.detailPolicy-useguild__item {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    list-style-position: inside;
+    list-style-type: disc;
+    padding: 0 8px;
+}
+.detailPolicy-useGuild__bot {
+    background-color: var(--purple);
+    padding: 12px;
+}
+.detailPolicy-useGuild__bot p {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    color: #fff;
+    text-align: center;
+}
+.detailPolicy-rules {
+    margin-top: 12px;
+}
+.detailPolicy-rules span:nth-child(1) {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+}
+.detailPolicy-rules span:nth-child(3),
+.detailPolicy-rules span:nth-child(7) {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    margin-top: 8px;
+}
+.detailPolicy-rules span:nth-child(5),
+.detailPolicy-rules span:nth-child(9) {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    margin: 8px 0 4px 0;
+}
+
+.detailPolicy-recomment {
+    margin-top: 12px;
+}
+
+.detailPolicy-recomment__title {
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+}
+.recomment-list {
+    display: grid;
+}
 
 @media only screen and (max-width: 1023px) {
     .service-detail {
-        padding: 0 0 80px 0;
+        padding: 0 0 92px 0;
         position: relative;
     }
     .service-detail .org-evaluate__cnt {
@@ -647,12 +719,12 @@
     .active-mb .detail-right__percent p {
         font-size: 14px;
     }
-    .service-detail__org-mb{
+    .service-detail__org-mb {
         display: block;
     }
-    .service-detail .detail-right__infoMer{
+    .service-detail .detail-right__infoMer {
         width: 100%;
-        background-color: #FFF;
+        background-color: #fff;
         border-radius: 8px;
         margin: 12px 0px;
         padding: 12px;
